# gptcli

./: .gitignore  README.md  pyproject.toml
src/: gptcli.py
